Fix spacing

--- a/static/styles/mainpage.css
+++ b/static/styles/mainpage.css
@@ -9,5 +9,5 @@ h1, p {
 }
 
 h1 {
-  padding-top: 50%;
+  padding-top: 20px;
 }
